--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch: # enable manual triggering
 
 jobs:
-  docker:
+  docker-dev-mutable:
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -24,10 +24,8 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
+            dev-mode
             type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
 
       - name: Login to GHCR
         uses: docker/login-action@v2
@@ -41,6 +39,41 @@ jobs:
         with:
           context    : .
           file       : ./Dockerfile.quarkus
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+        env:
+          QUARKUS_PROFILE: dev
+
+  docker-dev:
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ghcr.io/${{ github.repository }}
+          tags: |
+            dev
+            type=ref,event=branch
+
+      - name: Login to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context    : .
+          file       : ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
         env:
