--- a/visa-web-graphql/pom.xml
+++ b/visa-web-graphql/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>api</artifactId>
         <groupId>eu.ill.visa</groupId>
@@ -8,48 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>visa-web-graphql</artifactId>
+
     <properties>
-        <quarkus.package.jar.type>mutable-jar</quarkus.package.jar.type>
-    </properties>    
-<build>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.1</version>
-            <configuration>
-                <source>21</source>
-                <target>21</target>
-            </configuration>
-        </plugin>
-        <plugin>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-maven-plugin</artifactId>
-            <version>3.15.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>build</goal>
-                            <goal>generate-code</goal>
-                            <goal>generate-code-tests</goal>
-                        </goals>    
-                    </execution>        
-                </executions>          
-        </plugin>   
-        <plugin>
-            <groupId>io.smallrye</groupId>
-            <artifactId>jandex-maven-plugin</artifactId>
-            <version>3.2.2</version>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>jandex</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-    </plugins>
-</build>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>eu.ill.visa</groupId>
@@ -66,10 +30,8 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-smallrye-graphql</artifactId>
         </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-oidc</artifactId>
-        </dependency>
+
+
     </dependencies>
 
 </project>
