--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -78,3 +78,38 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
         env:
           QUARKUS_PROFILE: dev
+
+  docker-native:
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ghcr.io/${{ github.repository }}
+          tags: |
+            native
+            type=ref,event=branch
+
+      - name: Login to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context    : .
+          file       : ./Dockerfile.native
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+        env:
+          QUARKUS_PROFILE: prod
