--- a/visa-app/pom.xml
+++ b/visa-app/pom.xml
@@ -29,6 +29,31 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>eu.ill.visa</groupId>
+            <artifactId>visa-web-rest</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.ill.visa</groupId>
+            <artifactId>visa-web-graphql</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.ill.visa</groupId>
+            <artifactId>visa-web-gateway</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.ill.visa</groupId>
+            <artifactId>visa-remote-desktop</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.ill.visa</groupId>
+            <artifactId>visa-scheduler</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
